--- a/JS/precio.html
+++ b/JS/precio.html
@@ -48,8 +48,8 @@
             method="POST">
                 <h2 class="footer__newsletter">Suscríbete a la newsletter</h2>
                 <div class="footer__inputs">
-                    <input type="email" placeholder="Email:" class="footer__input" >
-                    <button type="submit" class="footer__submit">Regístrate</button>
+                    <input type="email" placeholder="Email:" class="footer__input" name="email" id="email">
+                    <button onclick="guardar()" class="footer__submit">Regístrate</button>
                 </div>
             </form>
         </section>
@@ -65,4 +65,8 @@
         </section>
     </footer>
     </body>
+   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
+    <script src="/JS/configuracion.js"></script>
+    <script src="/JS/guardar.js"></script>
 </html>
