--- a/JS/entradas.html
+++ b/JS/entradas.html
@@ -25,11 +25,11 @@
         method="POST">
             <h2 class="entradas__reserva">Reserve sus entradas</h2>
             <div class="entrada__inputs">
-                <input type="text" placeholder="Nombre:" class="entrada__input" name="name">
-                <input type="email" placeholder="Email:" class="entrada__input" name="email" >
-                <input type="number" min="1" placeholder="Cantidad boletos:" class="entrada__input" name="value">
-                <input type="date" placeholder="Fecha" class="entrada__input" name="message">
-                <button type="submit" class="entrada__submit">Reservar</button>
+                <input type="text"  placeholder="Nombre" class="entrada__input" name="name" id="nombre">
+                <input type="email"  placeholder="Email" class="entrada__input" name="email" id="email" >
+                <input type="number" min="1" max="10" placeholder="Cantidad boletos" class="entrada__input" name="value" id="cantidad_boleto">
+                <input type="date" placeholder="Fecha" class="entrada__input" name="message" id="fecha">
+                <button onclick="guardar1()" class="entrada__submit">Reservar</button>
             </div>
         </form>
     </section>
@@ -40,8 +40,8 @@
                 method="POST">
                     <h2 class="footer__newsletter">Suscríbete a la newsletter</h2>
                     <div class="footer__inputs">
-                        <input type="email" placeholder="Email:" class="footer__input" >
-                        <button type="submit" class="footer__submit">Regístrate</button>
+                       <input type="email" placeholder="Email:" class="footer__input" name="email" id="email">
+                        <button onclick="guardar()" class="footer__submit">Regístrate</button>
                     </div>
                 </form>
             </section>
@@ -58,4 +58,8 @@
             </section>
         </footer>
     </body>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
+    <script src="/JS/configuracion.js"></script>
+    <script src="/JS/guardar.js"></script>
 </html>
