--- a/JS/entradas.html
+++ b/JS/entradas.html
@@ -21,27 +21,27 @@
 
     <!--form para comprar entradas-->
     <section class="entradas__container container">
-        <form class="entrada__form" action="https://formspree.io/f/xzbwrggq"
+        <form class="entrada__form" 
         method="POST">
             <h2 class="entradas__reserva">Reserve sus entradas</h2>
             <div class="entrada__inputs">
                 <input type="text"  placeholder="Nombre" class="entrada__input" name="name" id="nombre">
                 <input type="email"  placeholder="Email" class="entrada__input" name="email" id="email" >
-                <input type="number" min="1" max="10" placeholder="Cantidad boletos" class="entrada__input" name="value" id="cantidad_boleto">
+                <input type="number" min="1"  placeholder="Cantidad boletos" class="entrada__input" name="value" id="cantidad_boleto">
                 <input type="date" placeholder="Fecha" class="entrada__input" name="message" id="fecha">
-                <button onclick="guardar1()" class="entrada__submit">Reservar</button>
+                <a href="#" onclick="guardar1()" class="entrada__submit"><br>Reservar</a>
             </div>
         </form>
     </section>
         
         <footer class="footer">
             <section class="footer__container container">
-                <form class="footer__form" action="https://formspree.io/f/xlevgaaw"
+                <form class="footer__form" 
                 method="POST">
                     <h2 class="footer__newsletter">Suscríbete a la newsletter</h2>
                     <div class="footer__inputs">
-                       <input type="email" placeholder="Email:" class="footer__input" name="email" id="email">
-                        <button onclick="guardar()" class="footer__submit">Regístrate</button>
+                        <input type="email" placeholder="Email:" class="footer__input" name="email" id="email">
+                        <a href="#" onclick="guardar()" class="footer__submit"><br>Regístrate</a>
                     </div>
                 </form>
             </section>
