--- a/JS/horario.html
+++ b/JS/horario.html
@@ -28,12 +28,12 @@
         </section>
         <footer class="footer">
             <section class="footer__container container">
-                <form class="footer__form" action="https://formspree.io/f/xlevgaaw"
+                <form class="footer__form" 
                 method="POST">
                     <h2 class="footer__newsletter">Suscríbete a la newsletter</h2>
                     <div class="footer__inputs">
                         <input type="email" placeholder="Email:" class="footer__input" name="email" id="email">
-                        <button onclick="guardar()" class="footer__submit">Regístrate</button>
+                        <a href="#" onclick="guardar()" class="footer__submit"><br>Regístrate</a>
                     </div>
                 </form>
             </section>
