--- a/JS/registrate.html
+++ b/JS/registrate.html
@@ -13,18 +13,19 @@
         <section class="formulario_body">
         <div class="formulario_inicio">
             <h1>Regístrate</h1>
-            <form method="post">
+            <form method="POST">
                 <div class="username">
-                    <input type="text" placeholder="Nombre de usuario" required>
+                    <input type="text" placeholder="Nombre de usuario" required id="nombre">
                 </div>
                 <div class="email">
-                    <input type="email" placeholder="Email" required>
+                    <input type="email" placeholder="Email" required id="email">
                 </div>
                 <div class="password">
-                    <input type="password" placeholder="Contraseña"required>
-                    </input>
+                    <input type="password" placeholder="Contraseña" required id="password">
                 </div>
-                    <input type="submit" value="Regístrate" >
+                <div class="_submit"> 
+                    <a href="#" class="_submittext" onclick="guardar3()"><br>Regístrate</a> 
+                </div>
                 <div class="registrarse">
                     <p>¿Ya tienes cuenta?</p><a href="/JS/inicio_sesion.html">Iniciar sesión</a>
                 </div>
@@ -32,4 +33,8 @@
         </div>
     </section>
     </body>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
+    <script src="/JS/configuracion.js"></script>
+    <script src="/JS/guardar.js"></script>
 </html>
