--- a/JS/index.html
+++ b/JS/index.html
@@ -26,13 +26,13 @@
         <section class="botones">
             <ul class = "botones_container container">
                 <li class ="boton_items">
-                    <a href="explora.html" class= "nav_boton">Explora</a>
+                    <a href="/JS/explora.html" class= "nav_boton">Explora</a>
                 </li>
                 <li class ="boton_items">
-                    <a href="horario.html" class= "nav_boton">Horario</a>
+                    <a href="/JS/horario.html" class= "nav_boton">Horario</a>
                 </li>
                 <li class ="boton_items">
-                    <a href="precio.html" class= "nav_boton">Tarifas</a>
+                    <a href="/JS/precio.html" class= "nav_boton">Tarifas</a>
                 </li>
             </ul>
         </section>
@@ -53,7 +53,7 @@
                         <h2>Exposiciones</h2>
                     </li>
                     <li class ="boton_items2">
-                        <a href="entradas.html" class= "nav_boton2">Entrada general</a>
+                        <a href="/JS/entradas.html" class= "nav_boton2">Entrada general</a>
                     </li>
                 </ul>
             </section>
