--- a/JS/entradas.html
+++ b/JS/entradas.html
@@ -40,7 +40,7 @@
                 method="POST">
                     <h2 class="footer__newsletter">Suscríbete a la newsletter</h2>
                     <div class="footer__inputs">
-                        <input type="email" placeholder="Email:" class="footer__input" name="email" id="email">
+                        <input type="email" placeholder="Email" class="footer__input" name="email" id="email">
                         <a href="#" onclick="guardar()" class="footer__submit"><br>Regístrate</a>
                     </div>
                 </form>
