--- a/JS/inicio_sesion.html
+++ b/JS/inicio_sesion.html
@@ -24,7 +24,7 @@
                     <a href="/JS/PasswordOlvidada.html">¿Olvidó su contraseña?</a>
                 </div>
                 <div class="_submit"> 
-                    <a href="#" class="_submittext" onclick="guardar2()"><br>Iniciar</a> 
+                    <a href="#" class="_submittext" onclick="guardar2()">Iniciar</a> 
                 </div>
                 
                 <div class="registrarse">
