--- a/JS/registrate.html
+++ b/JS/registrate.html
@@ -24,7 +24,7 @@
                     <input type="password" placeholder="Contraseña" required id="password">
                 </div>
                 <div class="_submit"> 
-                    <a href="#" class="_submittext" onclick="guardar3()"><br>Regístrate</a> 
+                    <a href="#" class="_submittext" onclick="guardar3()">Regístrate</a> 
                 </div>
                 <div class="registrarse">
                     <p>¿Ya tienes cuenta?</p><a href="/JS/inicio_sesion.html">Iniciar sesión</a>
