--- a/JS/entradas.html
+++ b/JS/entradas.html
@@ -15,9 +15,15 @@
                 <div  class="nav__logo"> 
                     <img src="/Images/MuseoLogo.png" class="nav__img" >
                 </div>
-                <h1 class="horario_title">Entradas</h1>
+                <div class="nav__iconos">
+                    <a href="/JS/inicio_sesion.html" class="nav__link"><img src= "/Images/login.svg" class="expo_login" id="login"></a>
+                    <a href="#" class="nav__link" onclick="logout()"><img src= "/Images/logout.svg" class="expo_login" id="logout"></a>
+                </div>
             </nav>
     </header>
+    <section class="titulo">
+        <h1>Entradas</h1>
+    </section>
 
     <!--form para comprar entradas-->
     <section class="entradas__container container">
@@ -26,10 +32,11 @@
             <h2 class="entradas__reserva">Reserve sus entradas</h2>
             <div class="entrada__inputs">
                 <input type="text"  placeholder="Nombre" class="entrada__input" name="name" id="nombre">
-                <input type="email"  placeholder="Email" class="entrada__input" name="email" id="email" >
+                <!--input type="email"  placeholder="Email" class="entrada__input" name="email" id="email" -->
                 <input type="number" min="1"  placeholder="Cantidad boletos" class="entrada__input" name="value" id="cantidad_boleto">
                 <input type="date" placeholder="Fecha" class="entrada__input" name="message" id="fecha">
-                <a href="#" onclick="guardar1()" class="entrada__submit"><br>Reservar</a>
+                <!--En caso de no funcionar cambia a guardar1()-->
+                <a href="#" onclick="reservar()" class="entrada__submit"><br>Reservar</a>
             </div>
         </form>
     </section>
@@ -41,7 +48,7 @@
                     <h2 class="footer__newsletter">Suscríbete a la newsletter</h2>
                     <div class="footer__inputs">
                         <input type="email" placeholder="Email" class="footer__input" name="email" id="email">
-                        <a href="#" onclick="guardar()" class="footer__submit"><br>Regístrate</a>
+                        <a href="#" onclick="guardar()" class="footer__submit">Regístrate</a>
                     </div>
                 </form>
             </section>
@@ -60,6 +67,8 @@
     </body>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
     <script src="/JS/configuracion.js"></script>
     <script src="/JS/guardar.js"></script>
+    <script src="/JS/auth.js"></script>
 </html>
