--- a/JS/registrate.html
+++ b/JS/registrate.html
@@ -13,10 +13,10 @@
         <section class="formulario_body">
         <div class="formulario_inicio">
             <h1>Regístrate</h1>
-            <form method="POST">
-                <div class="username">
+            <form id="registrate-form">
+                <!--div class="username">
                     <input type="text" placeholder="Nombre de usuario" required id="nombre">
-                </div>
+                </div-->
                 <div class="email">
                     <input type="email" placeholder="Email" required id="email">
                 </div>
@@ -24,7 +24,8 @@
                     <input type="password" placeholder="Contraseña" required id="password">
                 </div>
                 <div class="_submit"> 
-                    <a href="#" class="_submittext" onclick="guardar3()">Regístrate</a> 
+                    <!--Agrega onclick="guardar3()" en caso que no funcione-->
+                    <a href="#" class="_submittext" onclick="sign_up()">Regístrate</a> 
                 </div>
                 <div class="registrarse">
                     <p>¿Ya tienes cuenta?</p><a href="/JS/inicio_sesion.html">Iniciar sesión</a>
@@ -35,6 +36,8 @@
     </body>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
     <script src="/JS/configuracion.js"></script>
     <script src="/JS/guardar.js"></script>
+    <script src="/JS/auth.js"></script>
 </html>
