--- a/JS/entradas.html
+++ b/JS/entradas.html
@@ -28,7 +28,7 @@
     <!--form para comprar entradas-->
     <section class="entradas__container container">
         <form class="entrada__form" 
-        method="POST">
+        method="POST" id="formulario_entradas">
             <h2 class="entradas__reserva">Reserve sus entradas</h2>
             <div class="entrada__inputs">
                 <input type="text"  placeholder="Nombre" class="entrada__input" name="name" id="nombre">
