--- a/JS/entradas.html
+++ b/JS/entradas.html
@@ -36,7 +36,7 @@
                 <input type="number" min="1"  placeholder="Cantidad boletos" class="entrada__input" name="value" id="cantidad_boleto">
                 <input type="date" placeholder="Fecha" class="entrada__input" name="message" id="fecha">
                 <!--En caso de no funcionar cambia a guardar1()-->
-                <a href="#" onclick="reservar()" class="entrada__submit"><br>Reservar</a>
+                <a href="#" type="submit" onclick="reservar()" class="entrada__submit"><br>Reservar</a>
             </div>
         </form>
     </section>
