--- a/JS/horario.html
+++ b/JS/horario.html
@@ -13,7 +13,7 @@
         <header class="hero">
                 <nav class = "nav container"> <!--Todo está dentro de un contenedor-->
                     <div  class="nav__logo"> 
-                        <img src="/Images/MuseoLogo.png" class="nav__img" >
+                        <a href="/JS/index.html"><img src="/Images/MuseoLogo.png" class="nav__img" ></a>
                     </div>
                     <div class="nav__iconos">
                         <a href="/JS/inicio_sesion.html" class="nav__link"><img src= "/Images/login.svg" class="expo_login" id="login"></a>
