--- a/JS/explora.html
+++ b/JS/explora.html
@@ -83,6 +83,8 @@
     </body>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
     <script src="/JS/configuracion.js"></script>
     <script src="/JS/guardar.js"></script>
+    <script src="/JS/auth.js"></script>
 </html>
