--- a/JS/explora.html
+++ b/JS/explora.html
@@ -61,7 +61,7 @@
         <footer class="footer">
             <section class="footer__container container">
                 <form class="footer__form" 
-                method="POST">
+                method="POST" id="formulario_newsletter">
                     <h2 class="footer__newsletter">Suscríbete a la newsletter</h2>
                     <div class="footer__inputs">
                         <input type="email" placeholder="Email" class="footer__input" name="email" id="email">
