--- a/JS/index.html
+++ b/JS/index.html
@@ -18,7 +18,7 @@
                     <a href="/JS/index.html"><img src="/Images/MuseoLogo.png" class="nav__img" ></a>
                 </div>
                 <div class="nav__iconos">
-                    <a href="/JS/inicio_sesion.html" class="nav__link"><img src= "/Images/login.svg" class="expo_login" id="login"></a>
+                    <a href="/JS/inicio_sesion.html" class="nav__link" onmouseover="showUser()><img src= "/Images/login.svg" class="expo_login" id="login"></a>
                     <a href="#" class="nav__link" onclick="logout()"><img src= "/Images/logout.svg" class="expo_login" id="logout"></a>
                 </div>
                  
