--- a/JS/precio.html
+++ b/JS/precio.html
@@ -33,9 +33,11 @@
                 Mexicana y Museo del Noreste durante el mismo día<br><br>
                 $20.00 estudiantes y maestros con credencial vigente<br><br>
                 Entrada libre a menores de 18 años, INAPAM e ICOM<br><br>
-            </p>
-            <div class="tarifas_text">
-                <a href="/JS/entradas.html" >Reserva tus entradas</a>
+            </p> 
+            <div class="registrarse">
+                <div class="entradas_boton">
+                    <a href="/JS/entradas.html" class="_entradastext">Reserva tus entradas</a>
+                </div>
             </div>
             
 
