--- a/JS/inicio_sesion.html
+++ b/JS/inicio_sesion.html
@@ -23,9 +23,11 @@
                 <div class="_submit"> 
                     <a href="#" class="_submittext" onclick="inicia()">Iniciar</a> 
                 </div>
-                
                 <div class="registrarse">
-                    <a href="/JS/registrate.html">Regístrate</a>
+                    <p>¿No tienes cuenta?</p>
+                    <div class="registro_boton">
+                        <a href="/JS/registrate.html" class="_submittext">Regístrate</a>
+                    </div>
                 </div>
             </form>
         </div>
