--- a/JS/registrate.html
+++ b/JS/registrate.html
@@ -28,7 +28,10 @@
                     <a href="#" class="_submittext" onclick="sign_up()">Regístrate</a> 
                 </div>
                 <div class="registrarse">
-                    <p>¿Ya tienes cuenta?</p><a href="/JS/inicio_sesion.html">Iniciar sesión</a>
+                    <p>¿Ya tienes cuenta?</p>
+                    <div class="registro_boton">
+                        <a href="/JS/inicio_sesion.html" class="_submittext">Inicia sesión</a>
+                    </div>
                 </div>
             </form>
         </div>
