--- a/JS/explora.html
+++ b/JS/explora.html
@@ -25,43 +25,52 @@
         <h1>Explora</h1>
     </section>
         <section class="explora">
+           <section class="explora">
             <div class="explora_body container">
-                <div class="titulos">
-                    <h1>Videos</h1>
-                    <div class="grid">
-                        <iframe src="https://drive.google.com/file/d/1Eaj2Lu5tytJcs4tipIXy6AxMs2cP18xF/preview" height="200px" width="320px" allow="controls"></iframe>
-                        <iframe src="https://drive.google.com/file/d/132FTZqJqghuPUmZXa5wBWdMHU0-84DzQ/preview" height="200px" width="320px" allow="controls"></iframe>
-                        <iframe src="https://drive.google.com/file/d/1StTJOnqX4unCq1IwkFdGrx-saGud2jsx/preview" height="200px" width="320px" allow="controls"></iframe>
-                    </div>
+                <div class="titulos2">
+                    <h2>Videos</h2>
+                </div>
+                <div class="grid">
+                        <iframe class="video_e" src="https://drive.google.com/file/d/1Eaj2Lu5tytJcs4tipIXy6AxMs2cP18xF/preview"></iframe>
+                        <iframe class="video_e" src="https://drive.google.com/file/d/132FTZqJqghuPUmZXa5wBWdMHU0-84DzQ/preview"></iframe>
+                        <iframe class="video_e" src="https://drive.google.com/file/d/1StTJOnqX4unCq1IwkFdGrx-saGud2jsx/preview"></iframe>
                 </div>
             </div>
             <div class="explora_body container">
-                <div class="titulos">
-                    <h1>Noticias</h1>
+                <div class="titulos2">
+                    <h2>Noticias</h2>
+                </div>
+                    <div class="grid">
+                        <a href="https://www.swissinfo.ch/spa/m%C3%A9xico-museos_museo-del-noreste-en-m%C3%A9xico-celebra-15-a%C3%B1os-con-sendas-exposiciones/47919800">
+                            <img src="/Images/noticia1.jpg" class="noticia_img">
+                        </a>
+                        <a href="https://www.nl.gob.mx/boletines-comunicados-y-avisos/invita-3-museos-descubrir-historia-en-15-voces">
+                            <img src="/Images/noticia2.jpg" class="noticia_img">
+                        </a>
+                        <a href="https://puntonoticias.mx/inicia-nuevo-ciclo-del-club-de-lectura-en-el-museo-del-noreste/">
+                            <img src="/Images/noticia3.jpg" class="noticia_img">
+                        </a>
+                    </div>
                     <div class="grid">
                         <a href="https://www.swissinfo.ch/spa/m%C3%A9xico-museos_museo-del-noreste-en-m%C3%A9xico-celebra-15-a%C3%B1os-con-sendas-exposiciones/47919800"
                             class="noticia_texto">
-                            <img src="/Images/noticia1.jpg" class="noticia_img">
                             El museo celebra 15 años
                         </a>
                         <a href="https://www.nl.gob.mx/boletines-comunicados-y-avisos/invita-3-museos-descubrir-historia-en-15-voces"
                             class="noticia_texto">
-                            <img src="/Images/noticia2.jpg" class="noticia_img">
                             Historia en 15 voces
                         </a>
                         <a href="https://puntonoticias.mx/inicia-nuevo-ciclo-del-club-de-lectura-en-el-museo-del-noreste/"
                             class="noticia_texto">
-                            <img src="/Images/noticia3.jpg" class="noticia_img">
                             Inicia club de lectura
                         </a>
                     </div>
-                </div>
             </div>
         </section>
         <footer class="footer">
             <section class="footer__container container">
                 <form class="footer__form" 
-                method="POST" id="formulario_newsletter">
+                method="POST">
                     <h2 class="footer__newsletter">Suscríbete a la newsletter</h2>
                     <div class="footer__inputs">
                         <input type="email" placeholder="Email" class="footer__input" name="email" id="email">
