--- a/JS/explora.html
+++ b/JS/explora.html
@@ -40,18 +40,18 @@
                 <div class="titulos2">
                     <h2>Noticias</h2>
                 </div>
-                   <div class="grid">
+                  <div class="grid">
                         <a href="https://www.swissinfo.ch/spa/m%C3%A9xico-museos_museo-del-noreste-en-m%C3%A9xico-celebra-15-a%C3%B1os-con-sendas-exposiciones/47919800" class="noticia_texto">
                             <img src="/Images/noticia1.jpg" class="noticia_img">
                         </br>El museo celebra 15 años
                         </a>
                         <a href="https://www.nl.gob.mx/boletines-comunicados-y-avisos/invita-3-museos-descubrir-historia-en-15-voces" class="noticia_texto">
                             <img src="/Images/noticia2.jpg" class="noticia_img">
-                        </br>El museo celebra 15 años
+                        </br>Historia en 15 voces
                         </a>
                         <a href="https://puntonoticias.mx/inicia-nuevo-ciclo-del-club-de-lectura-en-el-museo-del-noreste/" class="noticia_texto">
                             <img src="/Images/noticia3.jpg" class="noticia_img">
-                        </br>El museo celebra 15 años
+                        </br>Inicia clud de lectura
                         </a>
                     </div>
             </div>
