--- a/JS/explora.html
+++ b/JS/explora.html
@@ -51,7 +51,7 @@
                         </a>
                         <a href="https://puntonoticias.mx/inicia-nuevo-ciclo-del-club-de-lectura-en-el-museo-del-noreste/" class="noticia_texto">
                             <img src="/Images/noticia3.jpg" class="noticia_img">
-                        </br>Inicia clud de lectura
+                        </br>Inicia club de lectura
                         </a>
                     </div>
             </div>
