--- a/JS/precio.html
+++ b/JS/precio.html
@@ -27,7 +27,7 @@
     <section class="tarifas">
         <div class="tarifas_body container">
             <div class="titulos">
-                <h1>Entrada<h1>
+                <h2>Entrada</h2>
             </div>
             <p class="tarifas_text"><br><br>$40.00, incluye el acceso a Museo de Historia
                 Mexicana y Museo del Noreste durante el mismo día<br><br>
@@ -44,7 +44,7 @@
         </div>
         <div class="tarifas_body container">
             <div class="titulos">
-                <h1>Estacionamiento</h1>
+                <h2>Estacionamiento</h2>
             </div>
             <p class="tarifas_text"><br><br>Las primeras 2 horas $ 15.00 y $ 20.00 por cada hora siguiente<br><br>
                 2 horas de cortesía en la compra de una entrada a los Museos</p>
