--- a/JS/reservas.html
+++ b/JS/reservas.html
@@ -16,7 +16,7 @@
                     <a href="https://aliciav26.github.io/"><img src="/Images/MuseoLogo.png" class="nav__img" ></a>
                 </div>
                 <div class="nav__iconos">
-                    <a href="/JS/inicio_sesion.html" class="nav__link" onmouseover="showUser()"><img src= "/Images/login.svg" class="expo_login" id="login"></a>
+                    <a href="#" class="nav__link"  onclick="showUser()"><img src= "/Images/login.svg" class="expo_login" id="login"></a>
                     <a href="#" class="nav__link" onclick="logout()"><img src= "/Images/logout.svg" class="expo_login" id="logout"></a>
                 </div>
             </nav>
