--- a/JS/explora.html
+++ b/JS/explora.html
@@ -41,6 +41,18 @@
                     <h2>Noticias</h2>
                 </div>
                   <div class="grid">
+                        <a href="https://www.nl.gob.mx/boletines-comunicados-y-avisos/llega-al-museo-del-noreste-la-exposicion-tlateccayotl-los-artistas-de" class="noticia_texto">
+                            <img src="/Images/noticia4.jpg" class="noticia_img">
+                        </br>Llega exposición Tlateccáyot
+                        </a>
+                        <a href="https://www.nl.gob.mx/boletines-comunicados-y-avisos/cartoneria-y-arte-esperan-los-visitantes-de-3-museos" class="noticia_texto">
+                            <img src="/Images/noticia5.jpg" class="noticia_img">
+                        </br>Cartonería y Arte esperan a los visitantes
+                        </a>
+                        <a href="https://www.nl.gob.mx/boletines-comunicados-y-avisos/invitan-disfrutar-un-delicioso-cafe-con-historia" class="noticia_texto">
+                            <img src="/Images/noticia6.jpg" class="noticia_img">
+                        </br>Café con historia
+                        </a>
                         <a href="https://www.swissinfo.ch/spa/m%C3%A9xico-museos_museo-del-noreste-en-m%C3%A9xico-celebra-15-a%C3%B1os-con-sendas-exposiciones/47919800" class="noticia_texto">
                             <img src="/Images/noticia1.jpg" class="noticia_img">
                         </br>El museo celebra 15 años
