--- a/JS/index.html
+++ b/JS/index.html
@@ -60,81 +60,73 @@
                 </ul>
             </section>
 
-            <div class = "expo_container container">
-                <img src= "/Images/FlechaIzq.svg" class="expo_flecha" id="before">
-
-                <section class= "expo_body expo_body--show" data-id="1">
-                    <div class="expo_text">
-                        <h2 class="subtitle">Noreste Contemporáneo</h2><br>
-                        <p class="expo_info" >Historia que va desde los nómadas cazadores-recolectores, habitantes de estos territorios durante milenios, hasta la demarcación de la región en el Virreinato. Al entrar a esta sala se despliega un mapa satelital topográfico del noreste contemporáneo en el que en primera instancia pueden distinguirse los límites naturales de la región.</p>
-                    </div>
-                    <figure class="expo_picture">
-                        <img src="/Images/expo1.jpg" class="expo_img">
-                    </figure>
-                </section>
-
-                <section class= "expo_body" data-id="2">
-                    <div class="expo_text">
-                        <h2 class="subtitle"> Integración Funcional Del Noreste</h2><br>
-                        <p class="expo_info">Después de todos los conflictos militares y políticos previos, parece haberse dado una tregua. Porfirio Díaz desactivó problemas fronterizos con una hábil diplomacia. Iniciaba así la etapa en la que estas diferencias no volverían a situar a los dos países al borde de una guerra. Estas condiciones de relativa paz fueron a su vez propicias para atraer la inversión extranjera al noreste. Los ferrocarriles contribuyeron al desarrollo de la agricultura, la minería y la industria al facilitar la circulación de mercancías.</p>
-                    </div>
-                    <figure class="expo_picture">
-                        <img src="/Images/expo2.jpg" class="expo_img">
-                    </figure>
-                </section>
-
-                <section class= "expo_body" data-id="3">
-                    <div class="expo_text">
-                        <h2 class="subtitle">Conformación De La Frontera</h2><br>
-                        <p class="expo_info"> Durante diez años la República de Texas sostuvo con dificultad su independencia, lo que desembocaría en la provocación de una guerra contra México. Mas el designio expansionista de Estados Unidos maduraría con la anexión de la República de Texas en 1845. En 1848 se firmó el tratado de Guadalupe-Hidalgo, con el que terminó la guerra de intervención norteamericana. México cedió gran parte de su territorio del norte a Estados Unidos y la frontera del noreste quedó sobre el río Bravo. La definición de este límite internacional provocaría conflictos bélicos y sociales en ambas naciones.</p>
-                    </div>
-                    <figure class="expo_picture">
-                        <img src="/Images/expo3.jpg" class="expo_img">
-                    </figure>
-                </section>
-                <section class= "expo_body" data-id="4">
-                    <div class="expo_text">
-                        <h2 class="subtitle">Forja Republicana</h2><br>
-                        <p class="expo_info">Al llegar aquí aparece el espacio geográfico de los primeros esbozos de las entidades del noreste. En un mapa en mosaico del noreste mexicano y Texas se observa la distribución territorial de los estados y las principales ciudades que los conformaban. Cuando se consuma la Independencia, las Provincias Internas de Oriente se reintegraron a una diputación provincial en la que afloró la pugna entre Monterrey y Saltillo, pues ambas ciudades deseaban erigirse en cabecera regional.</p>
-                    </div>
-                    <figure class="expo_picture">
-                        <img src="/Images/expo4.jpg" class="expo_img">
-                    </figure>
-                </section>
-                <section class= "expo_body" data-id="5">
-                    <div class="expo_text">
-                        <h2 class="subtitle">Crisol Colonial</h2><br>
-                        <p class="expo_info">Al finalizar el primer tercio del siglo XVIII la integración territorial del noreste colonial estaba incompleta. Esa región estratégica fue muy vulnerable ante las crecientes rivalidades entre España y otras potencias europeas. Para agravar la situación, la presencia de los indios de las praderas se convirtió en una amenaza. La representación de indios comanche y apache en esta sala nos habla de la abrupta movilización de estos grupos hacia la región.</p>
-                    </div>
-                    <figure class="expo_picture">
-                        <img src="/Images/expo5.jpg" class="expo_img">
-                    </figure>
-                </section>
-                <section class= "expo_body" data-id="6">
-                    <div class="expo_text">
-                        <h2 class="subtitle">Virreinato Formativo</h2><br>
-                        <p class="expo_info">Al finalizar el primer tercio del siglo XVIII la integración territorial del noreste colonial estaba incompleta. Texas había sido objeto de una refundación luego de años de abandono. Sin embargo, el gigantesco territorio de la costa del Seno Mexicano permanecía hasta entonces sin dominar; abarcaba una extensión de litoral situado entre la barra del Pánuco y la Bahía del Espíritu Santo y de ahí hasta los linderos del Nuevo Reino de León.</p>
-                    </div>
-                    <figure class="expo_picture">
-                        <img src="/Images/expo6.jpg" class="expo_img">
-                    </figure>
-                </section>
-                <section class= "expo_body" data-id="7">
-                    <div class="expo_text">
-                        <h2 class="subtitle">El Antiguo Noreste</h2><br>
-                        <p class="expo_info">La arqueología ha podido reconstruir el origen y desarrollo de los habitantes del noreste gracias a los hallazgos encontrados al norte y área meridional de Tamaulipas; en San Isidro y la cueva de La Calzada, en Nuevo León; en la cueva de La Candelaria, la laguna de Mayrán y la sierra de la Paila, en Coahuila; y en la meseta de Edwards y el cañón del río Pecos, en Texas.</p>
-                    </div>
-                    <figure class="expo_picture">
-                        <img src="/Images/expo7.jpg" class="expo_img">
-                    </figure>
-                </section>
-
-                <img src="/Images/FlechaD.svg" class="expo_flecha" id="next">
-                
-            </div>
             
-        </section>
-
+        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <a href="/JS/entradas.html"><img src="/Images/expo1.jpg" class="d-block w-100" alt="Noreste Contemporáneo"></a>
+                <div class="carousel-caption d-none d-md-block">
+                  <h1><strong><mark>Noreste Contemporáneo</mark></strong></h1>
+                  <h2><strong><mark>Desde los nómadas hasta la región en el Virreinato</mark></strong></h2>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <a href="/JS/entradas.html"><img src="/Images/expo2.jpg" class="d-block w-100" alt="Integración Funcional Del Noreste"></a>
+                <div class="carousel-caption d-none d-md-block">
+                  <h1><strong><mark>Integración Funcional Del Noreste</mark></strong></h1>
+                  <h2><strong><mark>Tregua entre los dos países, integración del ferrocarril</mark></strong></h2>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <a href="/JS/entradas.html"><img src="/Images/expo3.jpg" class="d-block w-100" alt="Conformación De La Frontera"></a>
+                <div class="carousel-caption d-none d-md-block">
+                  <h1><strong><mark>Conformación De La Frontera</mark></strong></h1>
+                  <h2><strong><mark>Fin a la guerra de intervención norteamericana, México cede Texas</mark></strong></h2>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <a href="/JS/entradas.html"><img src="/Images/expo4.jpg" class="d-block w-100" alt="Forja Republicana"></a>
+                <div class="carousel-caption d-none d-md-block">
+                  <h1><strong><mark>Forja Republicana</mark></strong></h1>
+                  <h2><strong><mark>La distribución territorial de los estados y las principales ciudades</mark></strong></h2>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <a href="/JS/entradas.html"><img src="/Images/expo5.jpg" class="d-block w-100" alt="Crisol Colonial"></a>
+                <div class="carousel-caption d-none d-md-block">
+                  <h1><strong><mark>Crisol Colonial</mark></strong></h1>
+                  <h2><strong><mark>Finaliza el primer tercio del siglo XVIII, grupos de indios hacia la región</mark></strong></h2>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <a href="/JS/entradas.html"><img src="/Images/expo6.jpg" class="d-block w-100" alt="Virreinato Formativo"></a>
+                <div class="carousel-caption d-none d-md-block">
+                  <h1><strong><mark>Virreinato Formativo</mark></strong>/h1>
+                  <h2><strong><mark>El territorio de la costa del Seno Mexicano permanecía hasta entonces sin dominar</mark></strong></h2>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <a href="/JS/entradas.html"><img src="/Images/expo7.jpg" class="d-block w-100" alt="El Antiguo Noreste"></a>
+                <div class="carousel-caption d-none d-md-block">
+                  <h1><strong><mark>El Antiguo Noreste</mark></strong></h1>
+                  <h2><strong><mark>Hallazgos encontrados de los habitantes al norte y área meridional</mark></strong></h2>
+                </div>
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
         <footer class="footer">
             <section class="footer__container container">
                 <form class="footer__form" 
