--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
               <div class="carousel-item">
                 <a href="/JS/entradas.html"><img src="/Images/expo6.jpg" class="d-block w-100" alt="Virreinato Formativo"></a>
                 <div class="carousel-caption d-none d-md-block">
-                  <h1><strong><mark>Virreinato Formativo</mark></strong>/h1>
+                  <h1><strong><mark>Virreinato Formativo</mark></strong></h1>
                   <h2><strong><mark>El territorio de la costa del Seno Mexicano permanecía hasta entonces sin dominar</mark></strong></h2>
                 </div>
               </div>
