--- a/JS/index.html
+++ b/JS/index.html
@@ -63,71 +63,71 @@
 
             
         <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
-            <div class="carousel-indicators">
-              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-            </div>
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <a href="/JS/entradas.html"><img src="/Images/expo1.jpg" class="d-block w-100" alt="Noreste Contemporáneo"></a>
-                <div class="carousel-caption d-none d-md-block">
-                  <h1><strong><mark>Noreste Contemporáneo</mark></strong></h1>
-                  <h2><strong><mark>Desde los nómadas hasta la región en el Virreinato</mark></strong></h2>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <a href="/JS/entradas.html"><img src="/Images/expo2.jpg" class="d-block w-100" alt="Integración Funcional Del Noreste"></a>
-                <div class="carousel-caption d-none d-md-block">
-                  <h1><strong><mark>Integración Funcional Del Noreste</mark></strong></h1>
-                  <h2><strong><mark>Tregua entre los dos países, integración del ferrocarril</mark></strong></h2>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <a href="/JS/entradas.html"><img src="/Images/expo3.jpg" class="d-block w-100" alt="Conformación De La Frontera"></a>
-                <div class="carousel-caption d-none d-md-block">
-                  <h1><strong><mark>Conformación De La Frontera</mark></strong></h1>
-                  <h2><strong><mark>Fin a la guerra de intervención norteamericana, México cede Texas</mark></strong></h2>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <a href="/JS/entradas.html"><img src="/Images/expo4.jpg" class="d-block w-100" alt="Forja Republicana"></a>
-                <div class="carousel-caption d-none d-md-block">
-                  <h1><strong><mark>Forja Republicana</mark></strong></h1>
-                  <h2><strong><mark>La distribución territorial de los estados y las principales ciudades</mark></strong></h2>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <a href="/JS/entradas.html"><img src="/Images/expo5.jpg" class="d-block w-100" alt="Crisol Colonial"></a>
-                <div class="carousel-caption d-none d-md-block">
-                  <h1><strong><mark>Crisol Colonial</mark></strong></h1>
-                  <h2><strong><mark>Finaliza el primer tercio del siglo XVIII, grupos de indios hacia la región</mark></strong></h2>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <a href="/JS/entradas.html"><img src="/Images/expo6.jpg" class="d-block w-100" alt="Virreinato Formativo"></a>
-                <div class="carousel-caption d-none d-md-block">
-                  <h1><strong><mark>Virreinato Formativo</mark></strong></h1>
-                  <h2><strong><mark>El territorio de la costa del Seno Mexicano permanecía hasta entonces sin dominar</mark></strong></h2>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <a href="/JS/entradas.html"><img src="/Images/expo7.jpg" class="d-block w-100" alt="El Antiguo Noreste"></a>
-                <div class="carousel-caption d-none d-md-block">
-                  <h1><strong><mark>El Antiguo Noreste</mark></strong></h1>
-                  <h2><strong><mark>Hallazgos encontrados de los habitantes al norte y área meridional</mark></strong></h2>
-                </div>
-              </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
+          <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
           </div>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <a href="/JS/entradas.html"><img src="/Images/expo1.jpg" class="d-block w-100" alt="Noreste Contemporáneo"></a>
+              <div class="carousel-caption d-none d-md-block absolute1">
+                <h1 class="expos"><strong>Noreste Contemporáneo</strong></h1>
+                <h2><strong>Desde los nómadas hasta la región en el Virreinato</strong></h2>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <a href="/JS/entradas.html"><img src="/Images/expo2.jpg" class="d-block w-100" alt="Integración Funcional Del Noreste"></a>
+              <div class="carousel-caption d-none d-md-block absolute1">
+                <h1 class="expos"><strong>Integración Funcional Del Noreste</strong></h1>
+                <h2><strong>Tregua entre los dos países, integración del ferrocarril</strong></h2>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <a href="/JS/entradas.html"><img src="/Images/expo3.jpg" class="d-block w-100" alt="Conformación De La Frontera"></a>
+              <div class="carousel-caption d-none d-md-block absolute1">
+                <h1 class="expos"><strong>Conformación De La Frontera</strong></h1>
+                <h2><strong>Fin a la guerra de intervención norteamericana, México cede Texas</strong></h2>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <a href="/JS/entradas.html"><img src="/Images/expo4.jpg" class="d-block w-100" alt="Forja Republicana"></a>
+              <div class="carousel-caption d-none d-md-block absolute1">
+                <h1 class="expos"><strong>Forja Republicana</strong></h1>
+                <h2><strong>La distribución territorial de los estados y las principales ciudades</strong></h2>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <a href="/JS/entradas.html"><img src="/Images/expo5.jpg" class="d-block w-100" alt="Crisol Colonial"></a>
+              <div class="carousel-caption d-none d-md-block absolute1">
+                <h1 class="expos"><strong>Crisol Colonial</strong></h1>
+                <h2><strong>Finaliza el primer tercio del siglo XVIII, grupos de indios hacia la región</strong></h2>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <a href="/JS/entradas.html"><img src="/Images/expo6.jpg" class="d-block w-100" alt="Virreinato Formativo"></a>
+              <div class="carousel-caption d-none d-md-block absolute1">
+                <h1 class="expos"><strong>Virreinato Formativo</strong></h1>
+                <h2><strong>El territorio de la costa del Seno Mexicano permanecía hasta entonces sin dominar</strong></h2>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <a href="/JS/entradas.html"><img src="/Images/expo7.jpg" class="d-block w-100" alt="El Antiguo Noreste"></a>
+              <div class="carousel-caption d-none d-md-block absolute1">
+                <h1 class="expos"><strong>El Antiguo Noreste</strong></h1>
+                <h2><strong>Hallazgos encontrados de los habitantes al norte y área meridional</strong></h2>
+              </div>
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
         <footer class="footer">
             <section class="footer__container container">
                 <form class="footer__form" 
