--- a/JS/reservas.html
+++ b/JS/reservas.html
@@ -49,7 +49,7 @@
                     <a href="https://www.youtube.com/user/3museosNL" class="footer__icons"><img src="/Images/youtube.svg" class="footer__img"></a>
                 </div>
     
-                <h3 class="footer__copyright">Derechos reservados &copy; Museo del noreste</h3>
+                <p class="footer__copyright">Derechos reservados &copy; Museo del noreste</p>
             </section>
         </footer>
     </body>
